Changelog for HLint

    #373, require haskell-src-exts-1.9.6
    Add a type signature for GHC 7
    Suggest [x | x <- xs] ==> xs, if x is a variable
1.8.2
    #371, foo (\x -> y :: Int -> Int) is not a redundant bracket
    Add a hint to use just equality rather than isJust/fromJust
1.8.1
    Massive speed up for files with many naming hints
    #361, keep module names when suggesting infix
    Add support for wildcard matching on module names
    #357, don't camel case suggest on FOO_A
    #370, fix building with GHC 6.10.4
    #313, upgrade to haskell-src-exts-1.9.4
    Workaround for #358, disable empty where hints
    #355, make "--ignore=Parse error" work
    Add --cpp-simple to run a simple CPP to strip lines begining #
    Add bracketing information if the parent is a case
    Suggest intercalate
1.8
    Make --test --hint=file typecheck a file for valid hints
    #347, Suggest use of otherwise, instead of True, in pattern guards
    Add hints about redundant where statements
    Suggest removal of redundant guards
    Make hints about guards work on patterns/infix matches/case alts
    Make finding guards look a child functions
    Correctly collapse functions and lambdas using the same patterns
    Suggest promoting patterns bound to lambdas to functions
    Allow collapsing lambdas sharing pattern variables correctly
    #344, only give one warning for multiple collapsable lambdas
    #300, substantially improve module name resolution with imports
    BREAKING: imports in hint files require import "hint" HintFile
    #335, redundant id should only generate one warning
    Add a hint for using map (f &&& g)
    #328, for foo'bar suggest the naming fooBar
    #323, detect redundant brackets in field declarations
    #321, force the whole file before displaying a parse error
    Make --find more robust, fixes a potential parse error
1.7.3
    Upgrade to hscolour-1.17
1.7.2
    #318, match rules by expanding out (.)