@@ -3,7 +3,8 @@
 module Util where
 
 import Control.Arrow
-import Control.Monad.State
+import Control.Monad
+import Control.Monad.Trans.State
 import Data.Char
 import Data.Function
 import Data.List
